--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-    <title>camera + gallary</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <title>camera + gallary</title>
 </head>
 
 <body>
@@ -42,6 +43,22 @@
     <div class="message">
         login/signup
     </div>
+    <div class="gallery-cont">
+        <div class="gallery"> 
+            <span class="material-symbols-outlined">
+                collections_bookmark
+                </span>
+        </div>
+    </div>
+    <script src="https://unpkg.com/shortid-dist@1.0.5/dist/shortid-2.2.13.min.js"></script>
+    <script src="./db.js"></script>
     <script src="./script.js"></script>
+
+    <script>
+        let galleryele = document.querySelector(".gallery-cont")
+        galleryele.addEventListener("click", (e) => {
+            location.assign("./gallery.html")
+        })
+    </script>
 </body>
 </html>
