--- a/gallery.html
+++ b/gallery.html
@@ -5,16 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./gallerystyle.css">
-    <title>Mygallery</title>
+    <title>My Gallery</title>
 </head>
 <body>
     <div class="gallery-cont">
     </div>
     <div class="backtocamera">
-        goback
+        GoBack
     </div>
-
-    //script
     <script src="./db.js"></script>
     <script src="./galleryscript.js"></script>
 </body>
