--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-    <title>camera + gallary</title>
+    <title>Camera-Gallery</title>
 </head>
 
 <body>
@@ -34,14 +34,10 @@
     </div>
     <div class="filter-layer"></div>
     <div class="login-cont">
-       <!-- <a class="link" href="./login1.html">  -->
         <div class="login">
             <i class="fa-solid fa-user icon"></i>
         </div>
     </a>
-    </div>
-    <div class="message">
-        login/signup
     </div>
     <div class="gallery-cont">
         <div class="gallery"> 
